Mostly UI fixes (missing thumbnails default thumbnails) Make caddy container conditional: in case of HTTP don't need them
